Fix blue colors on homepage, spacing, transitions

--- a/sass/partials/calendar.scss
+++ b/sass/partials/calendar.scss
@@ -91,15 +91,15 @@
 .fc-title {
 	color: $white70a;
 	font-weight: 600;
-	transition: color 0.2s;
+	transition: color 0.2s ease;
 }
 
 .fc-event {
 	&:focus,
 	&:hover {
 		.fc-title {
-	   		color: $text;
-	   	}
+			color: $text;
+		}
 	}
 }
 
