--- a/sass/partials/modals.scss
+++ b/sass/partials/modals.scss
@@ -148,7 +148,7 @@
 		top: 0;
 		left: 0;
 		cursor: pointer;
-		transition: all 0.2s;
+		transition: all 0.2s ease;
 	}
 
 	&:hover {
@@ -185,7 +185,7 @@
 	margin: 0 15px;
 	width: calc(100% - 30px);
 	left: 0;
-	transition: all 0.2s;
+	transition: all 0.2s ease;
 
 	.circular {
 		position: absolute;
